<resources>
    <string name="app_name">GitHub User App</string>

    <string name="username">Username</string>
    <string name="name">Nama</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="boomark">Boomark</string>
    <string name="theme">Theme</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>

    <string name="tab_1">Following</string>
    <string name="tab_2">Followers</string>
    <string name="title_activity_follow">FollowActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="empty_boomark">Belum ada boomark</string>
    <string name="make_favorite">Make favorite button</string>

</resources>


